Changed Pane to CompactInline

--- a/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
+++ b/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid Background="Black">
         <SplitView Name="MenuSplitView" 
-                   DisplayMode="CompactOverlay" 
+                   DisplayMode="CompactInline" 
                    IsPaneOpen="False" 
                    CompactPaneLength="50" 
                    OpenPaneLength="150" 
