--- a/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
+++ b/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
@@ -103,6 +103,13 @@
                             </DataTemplate>
                         </GridView.ItemTemplate>
                     </GridView>
+
+                    <GridView Grid.Row="3" Margin="40,290,0,0">
+                        <Button FontFamily="Segoe MDL2 Assets" 
+                            FontSize="25" Height="50" Width="50" 
+                            Content="&#xE768;" Background="Gray" Click="Button_Click_1"/>
+                    </GridView>
+                    
                 </Grid>                
             </SplitView.Content>            
         </SplitView>        
