--- a/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
+++ b/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
@@ -24,7 +24,8 @@
                             Content="&#xE700;" Background="Transparent" Click="Button_Click"/>
                     
                     <StackPanel Orientation="Horizontal">
-                        <Button FontFamily="Segoe MDL2 Assets" 
+                        <Button x:Name="Home"
+                            FontFamily="Segoe MDL2 Assets" 
                             FontSize="25" Height="50" Width="50" 
                             Content="&#xE80F;" Background="Transparent"/>
                         <TextBlock Text="Home" FontSize="16" VerticalAlignment="Center"/>
@@ -36,9 +37,10 @@
                         <TextBlock Text="Playlist" FontSize="16" VerticalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <Button FontFamily="Segoe MDL2 Assets" 
+                        <Button x:Name="AddNewSongButton"
+                            FontFamily="Segoe MDL2 Assets" 
                             FontSize="25" Height="50" Width="50" 
-                            Content="&#xE710;" Background="Transparent"/>
+                            Content="&#xE710;" Background="Transparent" Click="AddNewSongButton_Click"/>
                         <TextBlock Text="Add Music" FontSize="16" VerticalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
@@ -109,7 +111,49 @@
                             FontSize="25" Height="50" Width="50" 
                             Content="&#xE768;" Background="Gray" Click="Button_Click_1"/>
                     </GridView>
-                    
+                    <!--#region AddNewSongView Ahsan-->
+                    <!-- Appears on the right side of the page and shows the user
+            option to import song to library. Collapsed/hidden by default -->
+                    <StackPanel x:Name="AddNewSongView"
+                        Grid.Column="1"
+                        Grid.Row="2"
+                        Orientation="Vertical"
+                        Visibility="Collapsed">
+                        <StackPanel Orientation="Vertical"
+                            Margin="5"
+                            HorizontalAlignment="Center">
+
+                            <!--Enter song title-->
+                            <TextBlock Text="Enter song title:" 
+                               Padding="5"/>
+                            <TextBox x:Name="SongTitle_UserInput"
+                             PlaceholderText="Title"
+                             Padding="5"/>
+
+                            <!--Enter song artist-->
+                            <TextBlock Text="Enter artist name:" 
+                               Padding="5"/>
+                            <TextBox x:Name="SongArtist_UserInput"
+                             PlaceholderText="Artist"
+                             Padding="5"/>
+
+                            <!--Enter song genre--><!--
+                            <TextBlock Text="Enter genre:" 
+                               Padding="5"/>
+                            <TextBox x:Name="Genre_UserInput"
+                             PlaceholderText="Genre"
+                             Padding="5"/>-->
+
+
+                            <!--Save button for import song-->
+                            <Button x:Name="SongSaveButton"
+                            Content="Add Song"
+                            Click="SongSaveButton_Click"
+                            Padding="5">
+                            </Button>
+                        </StackPanel>
+                    </StackPanel>
+                    <!--#endregion-->
                 </Grid>                
             </SplitView.Content>            
         </SplitView>        
