--- a/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
+++ b/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Background="White">
+    <Grid>
         <SplitView Name="MenuSplitView" 
                    DisplayMode="CompactInline" 
                    IsPaneOpen="False" 
