--- a/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
+++ b/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
@@ -18,11 +18,11 @@
                    Margin="0 0 10 0">
             <SplitView.Pane>
                 <StackPanel Background="Gray">
-                    
+
                     <Button FontFamily="Segoe MDL2 Assets" 
                             FontSize="25" Height="50" Width="50" 
                             Content="&#xE700;" Background="Transparent" Click="Button_Click"/>
-                    
+
                     <StackPanel Orientation="Horizontal">
                         <Button x:Name="Home"
                             FontFamily="Segoe MDL2 Assets" 
@@ -55,7 +55,7 @@
                             Content="&#xE8FA;" Background="Transparent"/>
                         <TextBlock Text="Sign In" FontSize="16" VerticalAlignment="Center"/>
                     </StackPanel>
-                    
+
                 </StackPanel>
             </SplitView.Pane>
 
@@ -65,16 +65,16 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    
+
                     <TextBlock Name="CategoryTextBlock" Text="My Music" FontSize="24" Margin="30" />
 
                     <GridView Grid.Row="1" Name="MenuGridView">
                         <MenuBar Width="288" >
                             <MenuBarItem Title="Songs" FontSize="20" >
                                 <MenuFlyoutItem Text="All Genres">
-                                    
+
                                 </MenuFlyoutItem>
-                                
+
                             </MenuBarItem>
                             <MenuBarItem Title="Artists" FontSize="20" >
                                 <MenuFlyoutItem Text="From: A to Z">
@@ -86,7 +86,7 @@
                             </MenuBarItem>
                         </MenuBar>
                     </GridView >
-                    
+
                     <GridView Grid.Row="2"
                               Margin="10,100,0,0"
                               Name="SongGridView"
@@ -94,29 +94,36 @@
                               ItemsSource="{x:Bind Songs}"
                               ItemClick="SongGridView_ItemClick" 
                               >
-                        <MediaElement Name="MyMediaElement" Source="Song.AudioFilePath"  AutoPlay="True" />
+                        <MediaElement Name="MyMediaElement" 
+                                      Source="Song.AudioFilePath" 
+                                      AutoPlay="True" />
                         <GridView.ItemTemplate>
                             <DataTemplate x:DataType="model:Song">
                                 <StackPanel>
-                                <Image Name="MyImage" Height="112" Width="101" 
+                                    <Image Name="MyImage"
+                                       Height="112"
+                                       Width="101" 
                                        Source="{x:Bind ImagePath}"/>
-      
-              <!--The artist name will be displayed below the title name -->
-                                    
-                                    <TextBlock FontSize="12" Text="{x:Bind Title}"
-                                               FontWeight="Bold"
-                                               TextWrapping="WrapWholeWords"
+
+                                    <!--The artist name will be displayed below the title name -->
+
+                                    <TextBox FontSize="12"
+                                             Text="{x:Bind Title}" 
+                                             BorderThickness="0"
+                                             FontWeight="Bold" TextWrapping="Wrap"
+                                             HorizontalAlignment="Center" />
+
+                                    <TextBox Text="{x:Bind Artist}" 
+                                               FontSize="14" FontWeight="Light"
+                                               BorderThickness="0" TextWrapping="Wrap"
                                                HorizontalAlignment="Center" />
-                                    
-                                    <TextBlock Text="{x:Bind Artist}" 
-                                               FontSize="16" FontWeight="Light"
-                                               TextWrapping="WrapWholeWords"
-                                               HorizontalAlignment="Center" />
+
+
                                     <!--<TextBlock Name="textblok2" Text="{x:Bind AudioFilePath}" FontSize="12" Width="200" Margin="5,5,5,5"/>-->
-               <!--Added button to edit info-->
-                                    
-                                    <Button Name="MyButton" FontFamily="Segoe MDL2 Assets" 
-                                            Height="50" Width="50" Background="Transparent" 
+                                    <!--Added button to edit info-->
+
+                                    <Button Name="MyButton" FontFamily="Segoe MDL2 Assets" FontSize="12" 
+                                            Height="38" Width="38" Background="Transparent" 
                                             Content="&#xE90B;">
                                         <Button.Flyout>
                                             <MenuFlyout>
@@ -124,18 +131,24 @@
                                                                 Text="Delete" Icon="Delete" 
                                                                 Click="DeleteButton_Click"/>
 
-                                                <MenuFlyoutItem x:Name="PlayButton" Text="Play" 
-                                                                Icon="Play" Click="PlayButton_Click"/>
+                                                <MenuFlyoutItem x:Name="PlayButton"
+                                                                Text="Play" 
+                                                                Icon="Play" 
+                                                                Click="PlayButton_Click"/>
 
 
-                                                <MenuFlyoutItem x:Name="EditInfo" Text="Edit Info" Icon="Edit"
-                                                                    Click="EditInfo_Click"/>
+                                                <MenuFlyoutItem x:Name="EditInfo" 
+                                                                Text="Edit Info" 
+                                                                Icon="Edit"
+                                                                Click="EditInfo_Click"/>
 
                                                 <MenuFlyoutItem x:Name="EditALbumCover" 
                                                                     Text="Edit AlbumCover" 
                                                                 
-                                                        HorizontalAlignment="Center" Icon="Edit"
+                                                        HorizontalAlignment="Center" 
+                                                                Icon="Edit"
                                                                     Click="EditALbumCover_Click"/>
+
 
 
                                             </MenuFlyout>
@@ -147,11 +160,7 @@
                         </GridView.ItemTemplate>
                     </GridView>
 
-                    <GridView Grid.Row="3" Margin="40,290,0,0">
-                        <Button FontFamily="Segoe MDL2 Assets" 
-                            FontSize="25" Height="50" Width="50" 
-                            Content="&#xE768;" Background="Gray" Click="Button_Click_1"/>
-                    </GridView>
+
                     <!--#region AddNewSongView Ahsan-->
                     <!-- Appears on the right side of the page and shows the user
                     option to import song to library. Collapsed/hidden by default -->
@@ -182,26 +191,17 @@
                             <TextBox x:Name="SongPath_UserInput"
                                      PlaceholderText="SongPath"
                                      Padding="5"/>
-                            <TextBlock Text="Add Image:" Padding="5"/>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBox x:Name="ImagePath_UserInput" Width="150"
-                                     PlaceholderText="ImagePath"
-                                     Padding="5"/>
-                                <Button x:Name="AddImageButton"
-                                    Content="Browse"
-                                    Click="AddImageButton_Click"
-                                    Padding="5"/>
-                            </StackPanel>
-                                <!--Save button for import song-->
-                                <Button x:Name="SongSaveButton"
+
+                            <!--Save button for import song-->
+                            <Button x:Name="SongSaveButton"
                                     Content="Save Song"
                                     Click="SongSaveButton_Click" Margin="0,5,5,5"
                                     Padding="5"/>
                         </StackPanel>
                     </StackPanel>
                     <!--#endregion-->
-                </Grid>                
-            </SplitView.Content>            
-        </SplitView>        
+                </Grid>
+            </SplitView.Content>
+        </SplitView>
     </Grid>
 </Page>
