--- a/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
+++ b/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
@@ -50,9 +50,9 @@
                         <TextBlock Text="Search" FontSize="16" VerticalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <Button FontFamily="Segoe MDL2 Assets" 
+                        <Button Name="SignIn" FontFamily="Segoe MDL2 Assets" 
                             FontSize="25" Height="50" Width="50" 
-                            Content="&#xE8FA;" Background="Transparent"/>
+                            Content="&#xE8FA;" Background="Transparent" Click="SignIn_Click"/>
                         <TextBlock Text="Sign In" FontSize="16" VerticalAlignment="Center"/>
                     </StackPanel>
 
@@ -132,7 +132,7 @@
                                                                 Click="DeleteButton_Click"/>
 
                                                 <MenuFlyoutItem x:Name="PlayButton"
-                                                                Text="Play" 
+                                                                Text="Play/Stop" 
                                                                 Icon="Play" 
                                                                 Click="PlayButton_Click"/>
 
