--- a/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
+++ b/LlamaMusicApp/LlamaMusicApp/MainPage.xaml
@@ -44,9 +44,9 @@
                         <TextBlock Text="Add Music" FontSize="16" VerticalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <Button FontFamily="Segoe MDL2 Assets" 
+                        <Button Name="SearchButton" FontFamily="Segoe MDL2 Assets" 
                             FontSize="25" Height="50" Width="50" 
-                            Content="&#xE721;" Background="Transparent"/>
+                            Content="&#xE721;" Background="Transparent" Click="SearchButton_Click"/>
                         <TextBlock Text="Search" FontSize="16" VerticalAlignment="Center"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
@@ -204,6 +204,31 @@
                                     Content="Save Song"
                                     Click="SongSaveButton_Click" Margin="0,5,5,5"
                                     Padding="5"/>
+                        </StackPanel>
+                    </StackPanel>
+                    <!--#endregion-->
+                    <!--#region SearchView Ahsan-->
+                    <!-- Appears on the right side of the page and shows the user
+                    option to import search songs by property. Collapsed/hidden by default -->
+                    <StackPanel x:Name="SearchView"
+                        Grid.Column="1"
+                        Grid.Row="2"
+                        Orientation="Vertical"
+                        Visibility="Collapsed">
+                        <StackPanel Orientation="Vertical"
+                            Margin="5"
+                            HorizontalAlignment="Center">
+                            <!--Search songs by artist-->
+                            <TextBlock Text="Search songs by artist:" Padding="5"/>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBox x:Name="ArtistName_UserInput" Width="150"
+                                     PlaceholderText="Artist"
+                                     Padding="5"/>
+                                <Button x:Name="SearchByArtist"
+                                    Content="Search"
+                                    Click="SearchByArtist_Click"
+                                    Padding="5"/>
+                            </StackPanel>
                         </StackPanel>
                     </StackPanel>
                     <!--#endregion-->
